--- a/OldVer/requirements.txt
+++ b/OldVer/requirements.txt
@@ -1,5 +1,8 @@
+customtkinter==5.2.2
+darkdetect==0.8.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
+packaging==24.2
 Pygments==2.18.0
 pyobjc-core==10.3.1
 pyobjc-framework-Cocoa==10.3.1
