--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 packages = [ { include = "memify", from = "src" } ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
-rich = ">=14.0.0,<15.0.0"
-simple-term-menu = ">=1.6.6,<2.0.0"
+python = ">=3.8"
+rich = ">=14.0.0"
+simple-term-menu = ">=1.6.6"
 
 [tool.poetry.scripts]
 memify = "memify.main:main"
