--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,16 @@
-[tool.poetry]
+[project]
 name = "memify"
-version = "0.1.0"
+version = "0.1.1"
 description = "Simple command-line flashcard program."
-authors = ["clamsfeel2"]
+authors = [{ name = "clamsfeel2", email = "clamsfeel@proton.me" }]
 license = "MIT"
 readme = "README.md"
-packages = [ { include = "memify", from = "src" } ]
+dependencies = ["rich>=14.0.0,<15.0.0"]
+requires-python = ">=3.8"
 
-[tool.poetry.dependencies]
-python = ">=3.8"
-rich = ">=14.0.0"
-simple-term-menu = ">=1.6.6"
-
-[tool.poetry.scripts]
+[project.scripts]
 memify = "memify.main:main"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
